# simple-chat

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
src/sc_chat/: main.py  router.py  urls.py
src/sc_chat/api/v1/: auth.py  chat_docs.py  rooms.py  user.py
src/sc_chat/core/: config.py
src/sc_chat/database/: base.py  conn.py
src/sc_chat/models/: __init__.py  base.py  message.py  room.py  user.py
src/sc_chat/repository/: auth_repository.py  chat_repository.py  user_repository.py
src/sc_chat/schemas/: chat.py  user.py
src/sc_chat/security/: auth.py  rbac.py
src/sc_chat/utils/common/: enum.py  exception.py
src/sc_chat/websocket/: auth.py  chat.py  connection_manager.py
tests/: conftest.py  test_sc_chat.py
